[package]
name = "cmc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.8.1", features = ["multipart", "ws"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.25", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
chrono = { version = "0.4.31", features=["serde"] }
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0"
tera = "1.17.1"
axum_csrf = {version = "0.11.0",features = ["layer"]}
tokio-postgres ="0.7.12"
pwhash = "0.3.1"
dotenv="0.15.0"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
cookie = "0.18.1"
p256 = { version = "0.13.2", features = ["pem"]}
hex = "0.4.3"
ripemd = "0.1.3"
sha2 = "0.10.8"
base-x = "0.2.11"
qrcode = "0.14.1"
image = "0.25.5"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
once_cell = "1.3.1"
base64= "0.22.1"
floating-duration = "0.1.2"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
strum_macros = "0.27.1"
websockets="0.3.0"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = {version="0.8.3", features=["runtime-tokio", "postgres"]}
sqlx-cli = "0.8.3"